<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/panel_batches"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/search_bg_rounded"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="11dp"
                android:paddingEnd="11dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/search_batches_hint"
                    android:inputType="text"
                    android:textColorHint="#64748b"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/search_icon_desc"
                    android:src="@drawable/ic_search"
                    app:tint="#64748b" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivFilter"
                android:layout_width="34dp"
                android:layout_height="36dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/search_bg_rounded"
                android:clickable="true"
                android:contentDescription="@string/filter_icon_desc"
                android:focusable="true"
                android:padding="8dp"
                android:src="@android:drawable/ic_menu_sort_by_size"
                app:tint="#64748b" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="5dp"
        android:text="@string/batch_manage_title"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flContent" />

</androidx.constraintlayout.widget.ConstraintLayout>

